syntax_error_fix_commit.txt
fix: Correct syntax error in conversation.rb rescue clause

## Problem Fixed
Deployment failed due to syntax error in `app/models/conversation.rb` line 346:
```ruby
rescue => e"  # ❌ Unterminated string causing syntax error
```

## Solution
Fixed the unterminated string in the rescue clause:
```ruby
rescue => e  # ✅ Proper syntax
  Rails.logger.error "[CONVERSATION DEBUG] Error during Redis cleanup for conversation #{id}: #{e.message}"
```

## Error Details
```
SyntaxError: /app/app/models/conversation.rb:346: syntax error, unexpected string literal, expecting `do' or '{' or '('
rescue => e"
           ^
/app/app/models/conversation.rb:357: unterminated string meets end of file
```

## Files Modified
- `app/models/conversation.rb` - Fixed syntax error in cleanup_redis_mappings_on_resolution method

## Impact
- ✅ Application can now start successfully
- ✅ No functional changes to conversation logic
- ✅ Maintains all existing debugging infrastructure
- ✅ Ready for deployment

## Verification
- Syntax check passed: `ruby -c app/models/conversation.rb`
- No output = syntax is correct 